[gd_scene load_steps=6 format=3 uid="uid://beed53ejvrt2p"]

[ext_resource type="Script" path="res://scenes/Click.gd" id="1_ax1jt"]
[ext_resource type="Texture2D" uid="uid://d38q2a3eynygf" path="res://icon.svg" id="1_h8u8u"]
[ext_resource type="Texture2D" uid="uid://bayxvynqg45ay" path="res://icon_pressed.png" id="2_eiwto"]
[ext_resource type="Script" path="res://scenes/Click_presenter.gd" id="4_kp3up"]

[sub_resource type="LabelSettings" id="LabelSettings_uvcuo"]
font_size = 32

[node name="Game" type="Node2D"]

[node name="Model" type="Node2D" parent="."]

[node name="Click" type="Node2D" parent="Model"]
script = ExtResource("1_ax1jt")

[node name="View" type="Node2D" parent="."]

[node name="Click_label" type="Label" parent="View"]
offset_left = -1.0
offset_top = 69.0
offset_right = 650.0
offset_bottom = 158.0
text = "CLICKS: 00"
label_settings = SubResource("LabelSettings_uvcuo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multipliers_label" type="Label" parent="View"]
offset_left = 24.0
offset_top = 744.0
offset_right = 648.0
offset_bottom = 792.0
text = "Multipliers:"
label_settings = SubResource("LabelSettings_uvcuo")

[node name="CheckButton" type="CheckButton" parent="View"]
offset_left = 8.0
offset_top = 640.0
offset_right = 145.0
offset_bottom = 692.0
scale = Vector2(2, 2)
text = "AUTOCLICK
"

[node name="Presenter" type="Node2D" parent="."]

[node name="Click_button" type="TextureButton" parent="Presenter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = 392.0
offset_right = 384.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_h8u8u")
texture_pressed = ExtResource("2_eiwto")
script = ExtResource("4_kp3up")

[node name="ItemList" type="ItemList" parent="Presenter"]
offset_left = 24.0
offset_top = 800.0
offset_right = 240.0
offset_bottom = 896.0
item_count = 3
item_0/text = "2x"
item_1/text = "4x"
item_2/text = "8x"

[connection signal="toggled" from="View/CheckButton" to="Presenter/Click_button" method="_on_check_button_toggled"]
[connection signal="button_up" from="Presenter/Click_button" to="Presenter/Click_button" method="_on_button_up"]
[connection signal="item_selected" from="Presenter/ItemList" to="Presenter/Click_button" method="_on_item_list_item_selected"]
